Início da definição do layout
Início da definição da tela da questão 1

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.pedrohenrique.tarefa3.MainActivity">
 
     <Button
-        android:id="@+id/questao1"
+        android:id="@+id/questao1_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/questao2"
+        android:id="@+id/questao2_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -33,6 +33,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/questao1"
+        app:layout_constraintTop_toBottomOf="@+id/questao1_btn"
         app:layout_constraintVertical_bias="0.405" />
 </android.support.constraint.ConstraintLayout>
