--- a/app/src/main/res/layout/activity_questao1.xml
+++ b/app/src/main/res/layout/activity_questao1.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nome"
-            android:inputType="text" />
+            android:inputType="textCapWords" />
 
     </LinearLayout>
 
@@ -111,17 +111,16 @@
             <TextView
                 android:id="@+id/nome_view_str"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:text="@string/nome"
-                android:visibility="invisible" />
+                android:visibility="visible" />
 
             <TextView
-                android:id="@+id/nome_str_view"
+                android:id="@+id/nome_input_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:visibility="invisible" />
+                android:text="Pedro"
+                android:visibility="visible" />
 
 
         </LinearLayout>
@@ -133,19 +132,18 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/sex_view"
+                android:id="@+id/sexo_view_str"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/sexo"
-                android:visibility="invisible" />
+                android:visibility="visible" />
 
             <TextView
-                android:id="@+id/sexo_str_view"
+                android:id="@+id/sexo_input_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:visibility="invisible" />
+                android:text="Pedro"
+                android:visibility="visible" />
         </LinearLayout>
 
     </LinearLayout>
