--- a/app/src/main/res/layout/activity_questao1.xml
+++ b/app/src/main/res/layout/activity_questao1.xml
@@ -112,6 +112,7 @@
                 android:id="@+id/nome_view_str"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:textStyle="bold"
                 android:text="@string/nome"
                 android:visibility="visible" />
 
@@ -119,7 +120,6 @@
                 android:id="@+id/nome_input_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pedro"
                 android:visibility="visible" />
 
 
@@ -136,13 +136,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sexo"
+                android:textStyle="bold"
                 android:visibility="visible" />
 
             <TextView
                 android:id="@+id/sexo_input_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pedro"
                 android:visibility="visible" />
         </LinearLayout>
 
